# krnel-graph

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: .publish-to-pypi.yml.swp  publish-to-pypi.yml  readthedocs.yml  test.yml
docs/: README.md  cli.rst  concepts.rst  conf.py  examples.rst  extending.rst  getting-started.rst  graph-specification.rst  index.rst  krnel-figures.afdesign  mech-interp-ops.rst  runners.rst  types.rst
docs/_static/: krnel-figures.afdesign
docs/mech-interp/: index.rst
examples/01-guardrail-comparisons/: .gitignore  README.md  additional_llamaguards.py  eval_table.py  grid_search.py  main.py  make_data.py  pyproject.toml
krnel/: __init__.py
src/krnel/: __init__.py  cli.py  logging.py
src/krnel/graph/: __init__.py  classifier_ops.py  cli.py  computation_step.py  config.py  dataset_ops.py  graph_diff.py  graph_transformations.py  grouped_ops.py  llm_ops.py  op_spec.py  repr_html.py  types.py  viz_ops.py
src/krnel/graph/runners/: __init__.py  base_runner.py  cached_runner.py  model_registry.py  op_status.py
src/krnel/graph/runners/local_runner/: __init__.py  local_arrow_runner.py  model_registry_implementations.py  probe_implementations.py
src/krnel/runners/: __init__.py  base_runner.py  cached_runner.py  local_runner.py  materialized_result.py  model_registry.py  ollama_local_runner.py  op_status.py  table_data.py
src/krnel/viz/: umap_viz.py
src/krnel_client_library/: __init__.py
tests/: __init__.py  test_classifier_registry.py  test_ephemeral_has_result.py  test_graph.py  test_graph_transformations.py  test_local_arrow_runner.py  test_local_runner_registry.py  test_model_provider_implementations.py  test_model_registry.py  test_op_spec.py  test_runner_singleton.py
