[project]
name = "krnel"
version = "0.0.16"
description = "Krnel client library"
readme = "README.md"
authors = [
    { name = "Kimberly Wilber", email = "kimmy+pypispam@krnel.ai" },
    { name = "Peyman Faratin", email = "peyman+pypispam@krnel.ai" },
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
]

[project.scripts]
krnel = "krnel:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
test = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
