[project]
name = "krnel"
version = "0.0.16"
description = "Krnel client library"
readme = "README.md"
authors = [
    { name = "Kimberly Wilber", email = "kimmy+pypispam@krnel.ai" },
    { name = "Peyman Faratin", email = "peyman+pypispam@krnel.ai" },
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
]

[project.scripts]
krnel = "krnel:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pandas>=2.3.1",
]
viz = [
    "numba>=0.61.2",
    "seaborn>=0.13.2", # do i need this ?
    "umap-learn",
    "jupyter-scatter>=0.22.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
krnel = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
